--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Breaker</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" async></script>
 </head>
 <body onload = "generateCode()">
     <h1>Code Breaker</h1>
-    <p>As an international sneak thief, you break into vaults all the time. <br>
+    <p id="intro">As an international sneak thief, you break into vaults all the time. <br>
         Riddling out a simple 3 digit code is child's play for you. <br>
         But you must be getting sloppy in your old age because you've tripped an alarm. <br>
         In no time at all, the police will be all over the place. <br>
         Can you get into the vault before they arrive?<br>
     </p>
     <form id="myForm">
-        <label for="guess">Guess the code --></label>
+        <label for="guess"></label>
         <input type="number" id="guess" name="guess" min="1" max="999"><br><br>
         <button type="submit">Guess</button>
     </form>
     <p id="guessCount">You have 7 guesses left</p>
     <p id="response"></p>
+    
 </body>
 </html>
